2004-02-16  Damon Chaplin  <damon@gnome.org>

	* .cvsignore: added gtk-doc.cat and gtkdocize.

2004-02-16  Damon Chaplin  <damon@gnome.org>

	* Released 1.2.

2004-02-16  Damon Chaplin  <damon@gnome.org>

	* gtk-doc.cat.in: removed public ID for gtk-doc.dtd, since we don't
	use it any more.

Sat Feb 14 02:14:27 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.m4: Avoid unnecessary checks if gtk-doc is 
	disabled.  (#134221, Julio M. Merino Vidal)

Sat Feb 14 02:03:01 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.make: Don't create unneeded empty 
	directories.  (#134319, Julio M. Merino Vidal)

Sat Feb 14 01:37:38 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.make: Add an empty all-local target to make it work
	with non-GNU make.  (#134343, Julio M. Merino Vidal)

Wed Jan 28 00:52:00 2004  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (OutputObjectList): Avoid emitting invalid
	docbook markup if there are no objects. Partial fix for #132661.

Sun Jan 25 22:01:15 2004  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in: Accept both the old and the new XInclude
	namespace.  (#131675, Edd Dumbill)

2004-01-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gtkdoc-mkhtml.in: exit when tools return non-zero so errors can
          be caught.

Thu Jan 15 23:06:10 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.xsl: Set the chunk.fast parameter, to gain some
	speed.

Thu Jan 15 23:05:23 2004  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-fixxref.in: Make it work again without explicit 
	--module.

Sat Dec 27 01:36:08 2003  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scangobj.in: 
	* gtkdoc-mktmpl.in: 
	* gtkdoc-scan.in: 
	* gtkdoc-fixxref.in: Add --help.  (#126915)

Sat Dec 27 00:43:42 2003  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ParseEnumDeclaration): 
	* gtkdoc-mktmpl.in (ParseEnumDeclaration): Support a trailing ,
	in enum declarations. These are a GNU C extension, but also 