@@ -1,3 +1,8 @@
+2004-03-04  Damon Chaplin  <damon@gnome.org>
+
+	* autogen.sh: fixed URLs to download autoconf/automake/libtool.
+	Patch from Frederic L. W. Meunier.
+
 2004-02-16  Damon Chaplin  <damon@gnome.org>
 
 	* .cvsignore: added gtk-doc.cat and gtkdocize.
